<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Better Idea</string>
	<string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="favorite_topic">Favorisieren</string>
    <string name="drawer_open">open_drawer</string>
    <string name="drawer_close">close_drawer</string>
    <string name="login">Login</string>
    <string name="register">Register with Mail</string>
    <string name="logo">Logo</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="action_logout">logout</string>
    <string name="action_settings">Settings</string>
    <string name="logo_image">Logo Image</string>
    <string name="add_image">Add Image</string>
    <string name="search_image">Search Image</string>
    <string name="test_text">Ideenmanagement App #1.... Wir haben die Aufgabe bekommen eine native App für die "Mobile" Vorlesung zu erstellen.</string>
    <string name="title_activity_login">Better Idea</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_hint">Benutzername</string>
    <string name="password_hint">Passwort</string>
	<string name="new_thema">Neues Thema</string>
	<string name="my_topics">Meine Themen</string>
	<string name="label_topic_example_title">Ideenmanagementapp für die Mobile Vorlesung entwickeln</string>
	<string name="label_topic_example_description">Wir haben die Aufgabe bekommen, eine native App für die Mobile Vorlesung zu entwickeln. Uns fehlen Ideen, welche Möglichkeiten es für Ideenapps gibt.</string>
	<string name="label_topic_example_archived_title">Übungen für Handballtraining</string>
	<string name="label_topic_example_archived_description">Ich suche Handballtrainingsübung zum Aufwärmen.</string>
	<string name="label_share_topic">Teilen</string>
	<string name="label_timestamp1">Letztes Update: 14:43, 03.03.2014</string>
	<string name="label_stats">Meine Stats</string>
	<string name="label_register_header">Du hast noch keinen Account?\nGib einen Benutzernamen ein.</string>
	<string name="hint_enter_idea">Hier eigene Idee eintragen.</string>
	<string name="button_send">Senden</string>
	<string name="change_username">Nutzernamen ändern</string>
	<string name="button_idea_good">Gute Idee!</string>
	<string name="button_idea_valid">Valide Idee</string>
	<string name="button_idea_spam">Spam melden</string>
	<string name="label_valuate_idea">Wie bewertest du die Idee?</string>
	<string name="label_valuate_idea_headline">Idee bewerten</string>
	<string name="title_topic_activity">Thema</string>
	<string name="title_topic_close_activity">Eigenes Thema</string>
	
	<!-- close topic -->
	<string name="uncover_all">Alle aufdecken</string>
	<string name="close_topic">Topic schließen</string>

	<!-- navigation items -->
	<string name="navigation_home">Startseite</string>
	<string name="navigation_mygames">Meine Themen</string>
	<string name="navigation_logout">Abmelden</string>
	<string name="navigation_settings">Einstellungen</string>
	<string name="navigation_stats">Meine Stats</string>
	
	<string name="last_ideas">Letzte Ideen</string>
	<string name="label_options">Einstellungen</string>
	<string name="label_language">Sprache</string>
	<string name="search_text">Suchbegriff</string>
	<string name="title_activity_register">Registrieren</string>
	<string name="title_activity_settings">Einstellungen</string>
	<string name="title_activity_stats">Meine Stats</string>
	<string name="register_account">Register Account</string>
	<string name="email_adress_hint">mail@example.com</string>
	
	<!-- Stats -->
	<string name="score">Dein Score:</string>
	<string name="credit">Deine Credits:</string>
	<string name="topicsCount">Anzahl Topics:</string>
	<string name="ideasCount">Anzahl Ideen:</string>
	<!-- Google Sign+ -->
	
    <string name="circles_title">Visible circles:</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>

    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>
    
    <!-- Used if there was an error loading the signed in user's name. -->
    <string name="unknown_person">Unknown</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="profile_picture">User\'s profile picture.</string>
    <string name="edittext_topic_title">Thema</string>
    <string name="edittext_topic_description">Beschreibung</string>
    <string name="button_create_topic_go">LOS GEHT\'S</string>
    <string name="button_create_topic_discard">VERWERFEN</string>
    <string name="label_create_topic_headline">Neues Thema</string>
    
    <!-- test DB -->
    <string name="test_db_text">test</string>
    <string name="test_db_text2">test2</string>
    <string name="desc_list_item_icon">Navigation List Item</string>
</resources>