<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<EditText android:id="@+id/edittext_topic_title"
	    android:layout_margin="5dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/edittext_topic_title"/>
	<EditText android:id="@+id/edittext_topic_description"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/edittext_topic_description"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
	    <Button
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_marginRight="5dp"
		    android:layout_height="wrap_content"
		    style="@style/button_style_white"
		    android:text="@string/button_create_topic_discard"/>
		<Button
	    	android:layout_width="0dp"
	    	android:layout_weight="1"
	    	android:layout_height="wrap_content"
	   	 	style="@style/button_style"
	    	android:text="@string/button_create_topic_go"/>
	</LinearLayout>
	
</LinearLayout>
