<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView android:id="@+id/label_valuate_idea"
	    android:layout_margin="5dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/label_valuate_idea"
	    android:fontFamily="sans-serif-thin"
	    android:textSize="10pt" />
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
	    <Button android:id="@+id/button_idea_good"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_marginRight="5dp"
	        android:layout_height="wrap_content"
	        style="@style/button_style_green"
	        android:text="@string/button_idea_good" />
	    <Button android:id="@+id/button_idea_valid"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_marginRight="5dp"
		    android:layout_height="wrap_content"
		    style="@style/button_style_white"
		    android:text="@string/button_idea_valid" />
		<Button android:id="@+id/button_idea_spam"
	    	android:layout_width="0dp"
	    	android:layout_weight="1"
	    	android:layout_height="wrap_content"
	   	 	style="@style/button_style"
	    	android:text="@string/button_idea_spam" />
	</LinearLayout>
	
</LinearLayout>