<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="200dp"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/topic_background"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    
    <LinearLayout
        android:layout_height="180dp"
        android:layout_width="match_parent"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/topic_overview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_topic_example_archived_title"
            android:textSize="12pt"
            android:textStyle="bold"
            android:fontFamily="sans-serif-thin"
            android:layout_margin="10dp" />
    
   	 	<TextView 
            android:id="@+id/topic_overview_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_topic_example_archived_description"
            android:textStyle="bold"
            android:textSize="9pt"
            android:fontFamily="sans-serif-thin"
            android:layout_margin="10dp" />
    </LinearLayout>
    
    <View 
	         	android:id="@+id/trennlinie2"
	     	    android:layout_width="match_parent"
	     	    android:layout_height="1dp"
	     	    android:background="@color/grey"
	     	    android:layout_marginLeft="10dp"
	     	    android:layout_marginRight="10dp" />
    
    <LinearLayout android:id="@+id/info_leiste"
	         android:layout_width="match_parent"
	         android:layout_height="19dp"
	         android:orientation="horizontal"
	         android:layout_margin="10dp">
	        
	         <ImageView android:id="@+id/button_share"
	             android:layout_width="20dp"
	             android:layout_height="match_parent"
	             android:background="@drawable/ic_action_share"
	             android:contentDescription="buttonShare" />
	         
	         <TextView 
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:text="@string/label_share_topic"
	             android:textColor="#888"/>
	         
	         <View 
	             android:layout_width="0dp"
	             android:layout_height="0dp"
	             android:layout_weight="1"
	          />
	         
	         <TextView android:id="@+id/topic_overview_timestamp"
	             android:layout_width="wrap_content"
	             android:layout_height="match_parent"
	             android:text="@string/label_timestamp1"
	             android:textColor="#888" />
	     </LinearLayout>
</LinearLayout>