<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="200dp"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/topic_background"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    
    <LinearLayout
        android:layout_height="180dp"
        android:layout_width="match_parent"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/topic_feed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_topic_example_archived_title"
            android:textSize="12pt"
            android:textStyle="bold"
            android:fontFamily="sans-serif-thin"
            android:layout_margin="10dp" />
    
   	 	<TextView 
            android:id="@+id/topic_feed_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_topic_example_archived_description"
            android:textStyle="bold"
            android:textSize="9pt"
            android:fontFamily="sans-serif-thin"
            android:layout_margin="10dp" />
    </LinearLayout>
    
    <View 
	         	android:id="@+id/trennlinie2"
	     	    android:layout_width="match_parent"
	     	    android:layout_height="1dp"
	     	    android:background="@color/grey" />
    
    <LinearLayout android:id="@+id/info_leiste2"
	         android:layout_width="match_parent"
	         android:layout_height="19dp"
	         android:orientation="horizontal"
	         android:layout_margin="10dp">
	        
	         <ImageView android:id="@+id/button_share"
	             android:layout_width="20dp"
	             android:layout_height="match_parent"
	             android:background="@drawable/ic_action_share"
	             android:contentDescription="buttonShare" />
	         
	         <TextView 
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:text="@string/label_share_topic"
	             android:textColor="#888"/>
	         
	         <View android:layout_width="150dp"
	             android:layout_height="match_parent"/>
	         
	         <TextView android:id="@+id/topic_feed_timestamp"
	             android:layout_width="wrap_content"
	             android:layout_height="match_parent"
	             android:text="@string/label_timestamp1"
	             android:textColor="#888" />
	     </LinearLayout>
</LinearLayout>
<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="200dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical"
        android:background="@drawable/topic_background">
        
        <TextView
            android:id="@+id/topic_feed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_topic_example_archived_title"
            android:textSize="12pt"
            android:textStyle="bold"
            android:fontFamily="sans-serif-thin"
            android:layout_margin="10dp" />
        
        <TextView 
            android:id="@+id/topic_feed_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_topic_example_archived_description"
            android:layout_below="@id/topic_feed_title"
            android:textStyle="bold"
            android:textSize="9pt"
            android:fontFamily="sans-serif-thin"
            android:layout_margin="10dp" />
        
	     <RelativeLayout android:id="@+id/info_leiste2"
	         android:layout_width="match_parent"
	         android:layout_height="20dp"
	         android:orientation="horizontal"
	         android:layout_alignParentBottom="true"
	         android:layout_margin="10dp">
	        
	         <ImageView android:id="@+id/button_share2"
	             android:layout_width="20dp"
	             android:layout_height="match_parent"
	             android:background="@drawable/ic_action_share"
	             android:contentDescription="share_icon"
	             android:layout_centerVertical="true"/>
	         
	         <TextView 
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:text="@string/label_share_topic"
	             android:textColor="#888"
	             android:layout_toRightOf="@id/button_share2"/>
	         
	         <TextView android:id="@+id/topic_feed_timestamp"
	             android:layout_width="wrap_content"
	             android:layout_height="match_parent"
	             android:text="@string/label_timestamp1"
	             android:textColor="#888"
	             android:layout_alignParentRight="true"
	             android:layout_centerVertical="true" />
	     </RelativeLayout>
     
	     <View 
	         	android:id="@+id/trennlinie2"
	     	    android:layout_width="match_parent"
	     	    android:layout_height="1dp"
	     	    android:background="@color/grey"
	     	    android:layout_above="@id/info_leiste2"
	     	    android:layout_margin="10dp" />

            
    </RelativeLayout> -->